ruby-raa/daemons: new spell, A toolkit to convert your script to a controllable daemon

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/daemons: new spell, A toolkit to convert your script to a controllable daemon
 	* ruby-raa/daemonize: new spell, Convert an existing program to a daemon
 	* ruby-raa/csvscan: new spell, Fastest CSV Parser
 	* ruby-raa/color-tools: new spell, Color manipulation utilities
