--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/erbscan: new spell, ERB compiler accelerator
 	* ruby-raa/deplate: new spell, Convert wiki-like markup to LaTeX, HTML, or DocBook
 	* ruby-raa/date2: new spell, An alternative date class
 	* ruby-raa/daemons: new spell, A toolkit to convert your script to a controllable daemon
