--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/fastercsv: new spell, FasterCSV is CSV, but faster, smaller, and cleaner.
 	* ruby-raa/facets: new spell, Ruby Facets
 	* ruby-raa/extractor: new spell, libextractor binding
 	* ruby-raa/erubis: new spell, a fast and extensible eRuby implementation
