ruby-raa/filemagic: new spell, Binding to libmagic

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/filemagic: new spell, Binding to libmagic
 	* ruby-raa/fastri: new spell, Faster, smarter RI doc browsing for Ruby, DRb-enabled
 	* ruby-raa/fastercsv: new spell, FasterCSV is CSV, but faster, smaller, and cleaner.
 	* ruby-raa/facets: new spell, Ruby Facets
