--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/hyogen: new spell, Hyogen converts CSV or Excel data to Ruby objects or a text.
 	* ruby-raa/float-formats: new spell, Conversion of floating point representations.
 	* ruby-raa/filemagic: new spell, Binding to libmagic
 	* ruby-raa/fastri: new spell, Faster, smarter RI doc browsing for Ruby, DRb-enabled
