ruby-raa/joystick-ruby: new spell, Joystick-Ruby

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/joystick-ruby: new spell, Joystick-Ruby
 	* ruby-raa/ip: new spell, Classes to work with IP Addresses, ranges and netmasks.
 	* ruby-raa/hyogen: new spell, Hyogen converts CSV or Excel data to Ruby objects or a text.
 	* ruby-raa/float-formats: new spell, Conversion of floating point representations.
