--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/mailparser: new spell, parse mail message
 	* ruby-raa/lightcsv: new spell, CSV parser
 	* ruby-raa/joystick-ruby: new spell, Joystick-Ruby
 	* ruby-raa/ip: new spell, Classes to work with IP Addresses, ranges and netmasks.
