--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,6 @@
+2008-01-30 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to r29866
+
 2008-01-24 Vlad Glagolev <stealth@sourcemage.org>
         * DETAILS: updated spell to r29801
 	* CONFIGURE: made SVG support configurable
