--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/needle: new spell, Needle: Dependency Injector for Ruby
 	* ruby-raa/mb-ruby: new spell, MusicBrainz-Ruby
 	* ruby-raa/mailparser: new spell, parse mail message
 	* ruby-raa/lightcsv: new spell, CSV parser
