ruby-raa/quickcert: new spell, QuickCert quickly and easily creates SSL certificates.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/quickcert: new spell, QuickCert quickly and easily creates SSL certificates.
 	* ruby-raa/opml: new spell, OPML Parser
 	* ruby-raa/nio: new spell, Formatting and conversion of numeric types (Integer, Rational, 
 	* ruby-raa/net-ssh: new spell, SSH2 client protocol implemented in Ruby
