--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-dict: new spell, Ruby/DICT
 	* ruby-raa/ruby-dbus: new spell, Ruby D-Bus provides an implementation of the D-Bus protocol
 	* ruby-raa/quickcert: new spell, QuickCert quickly and easily creates SSL certificates.
 	* ruby-raa/opml: new spell, OPML Parser
