ruby-raa/ruby-graphviz: new spell, Interface to the GraphViz graphing tool

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-graphviz: new spell, Interface to the GraphViz graphing tool
 	* ruby-raa/ruby-freedb: new spell, freedb library for Ruby
 	* ruby-raa/ruby-dict: new spell, Ruby/DICT
 	* ruby-raa/ruby-dbus: new spell, Ruby D-Bus provides an implementation of the D-Bus protocol
