ruby-raa/ruby-mime-types: new spell, MIME::Types for Ruby

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-mime-types: new spell, MIME::Types for Ruby
 	* ruby-raa/ruby-inotify: new spell, Interface to Linux's Inotify (C version)
 	* ruby-raa/ruby-graphviz: new spell, Interface to the GraphViz graphing tool
 	* ruby-raa/ruby-freedb: new spell, freedb library for Ruby
