ruby-raa/ruby-password: new spell, Ruby/Password

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-password: new spell, Ruby/Password
 	* ruby-raa/ruby-net-ping: new spell, Ping for Ruby
 	* ruby-raa/ruby-net-dns: new spell, Library to handle DNS requests, protocol and daemon
 	* ruby-raa/ruby-mime-types: new spell, MIME::Types for Ruby
