--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-svg: new spell, Ruby/SVG
 	* ruby-raa/ruby-serialport: new spell, Ruby/SerialPort
 	* ruby-raa/ruby-password: new spell, Ruby/Password
 	* ruby-raa/ruby-net-ping: new spell, Ping for Ruby
