--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/ruby-termios: new spell, simple wrapper for termios(3)
 	* ruby-raa/ruby-terminfo: new spell, terminfo binding for Ruby
 	* ruby-raa/ruby-svg: new spell, Ruby/SVG
 	* ruby-raa/ruby-serialport: new spell, Ruby/SerialPort
