--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/rubygame: new spell, Flexible game development library built on SDL.
 	* ruby-raa/ruby-xslt: new spell, A Ruby class for processing XSLT
 	* ruby-raa/ruby-xosd: new spell, Binding for the X On-Screen Display library.
 	* ruby-raa/ruby-xattr: new spell, Interface to the XFS-compatible *_attr syscalls.
