--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/tmail: new spell, TMail is an email handling library. 
 	* ruby-raa/text-format: new spell, Text::Format for Ruby
 	* ruby-raa/rubymail: new spell, An Email/MIME library.
 	* ruby-raa/rubygame: new spell, Flexible game development library built on SDL.
