--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/user-choices: new spell, Unified interface to command line, config files, environment
 	* ruby-raa/trans-simple: new spell, Transaction::Simple object transactions
 	* ruby-raa/tmail: new spell, TMail is an email handling library. 
 	* ruby-raa/text-format: new spell, Text::Format for Ruby
