ruby-raa/xmlparser: new spell, XMLParser - RSS Parser/RSS Maker

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/xmlparser: new spell, XMLParser - RSS Parser/RSS Maker
 	* ruby-raa/vpim: new spell, vCard/iCalendar encoding/decoding library
 	* ruby-raa/vorbistagger: new spell, Reads and writes comments (aka tags) in Ogg Vorbis files
 	* ruby-raa/user-choices: new spell, Unified interface to command line, config files, environment
