libxml2: BUILD is no longer necessary (though no reason was given in HISTORY for why it was needed at some point)

--- a/libs/libxml2/HISTORY
+++ b/libs/libxml2/HISTORY
@@ -1,3 +1,6 @@
+2008-01-30 Eric Sandall <sandalle@sourcemage.org>
+	* BUILD: No longer needed (for whatever reason it was added)
+
 2008-01-22 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.6.31, SECURITY_PATCH=1
 
