--- a/ftp-libs/libtorrent/HISTORY
+++ b/ftp-libs/libtorrent/HISTORY
@@ -1,3 +1,6 @@
+2008-01-31 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	* DETAILS: update to 0.12.0
+
 2007-10-26 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: update to 0.11.9
 	* CONFIGURE, PRE_BUILD: disabled dht patch 
