--- a/ftp/rtorrent/HISTORY
+++ b/ftp/rtorrent/HISTORY
@@ -1,3 +1,6 @@
+2008-01-31 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	* DETAILS: update to 0.8.0
+
 2007-10-26 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: 0.7.9
 	* PRE_BUILD, CONFIGURE, DEPENDS: disabled dht until patch available
