--- a/audio-drivers/alsa-driver/HISTORY
+++ b/audio-drivers/alsa-driver/HISTORY
@@ -1,3 +1,6 @@
+2008-01-31 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated to 1.0.16rc2
+
 2007-12-03 Eric Sandall <sandalle@sourcemage.org>
 	* INSTALL: Don't call depmod here
 	* FINAL: Call depmod here and against $(get_kernel_version)
