mono-addins: Added an extensible framework for mono applications

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-01-31 Eric Sandall <sandalle@sourcemage.org>
+	* devel/mono-addins: Added an extensible framework for mono apps
+
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/xmlparser: new spell, XMLParser - RSS Parser/RSS Maker
 	* ruby-raa/vpim: new spell, vCard/iCalendar encoding/decoding library
