gtksourceview1: GTK text function extension libraries

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2008-01-31 Eric Sandall <sandalle@sourcemage.org>
 	* devel/mono-addins: Added an extensible framework for mono apps
+	* gnome2-libs/gtksourceview1: Added GTK text function extension
+	  libraries
 
 2008-01-30 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/xmlparser: new spell, XMLParser - RSS Parser/RSS Maker
