--- a/gnome2-libs/gtksourceview-sharp-2/HISTORY
+++ b/gnome2-libs/gtksourceview-sharp-2/HISTORY
@@ -1,3 +1,6 @@
+2008-01-31 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on gtksourceview1
+
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
 
@@ -18,3 +21,4 @@
 
 2005-06-11 Pieter Lenaerts <e-type@sourcemage.org>
 	* DEPENDS, DETAILS, BUILD, HISTORY: created spell
+
