gtksourceview-sharp-2: Updated to 0.11

--- a/gnome2-libs/gtksourceview-sharp-2/HISTORY
+++ b/gnome2-libs/gtksourceview-sharp-2/HISTORY
@@ -1,4 +1,6 @@
 2008-01-31 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 2.0-0.11
+	  SOURCE is now compressed with bzip2
 	* DEPENDS: Depends on gtksourceview1
 
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
