--- a/libs/libxml2/HISTORY
+++ b/libs/libxml2/HISTORY
@@ -1,3 +1,6 @@
+2008-01-31 Eric Sandall <sandalle@sourcemage.org>
+	* BUILD: Also remove auto* dependencies (thanks Jaka :))
+
 2008-01-30 Eric Sandall <sandalle@sourcemage.org>
 	* BUILD: No longer needed (for whatever reason it was added)
 
