--- a/ftp-libs/libtorrent/HISTORY
+++ b/ftp-libs/libtorrent/HISTORY
@@ -1,4 +1,8 @@
 2008-01-31 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	* PRE_BUILD, rm CONFIGURE, dht.diff, PRE_SUB_DEPENDS, and SUB_DEPENDS
+	because dht support now built-in.
+
+2008-01-31 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: update to 0.12.0
 
 2007-10-26 Mathieu Lonjaret <lejatorn@sourcemage.org>
