--- a/ftp/rtorrent/HISTORY
+++ b/ftp/rtorrent/HISTORY
@@ -1,4 +1,8 @@
 2008-01-31 Mathieu Lonjaret <lejatorn@sourcemage.org>
+	* DEPENDS, rm CONFIGURE, PRE_BUILD, dht.diff: not needed anymore
+	because dht support now built-in
+ 
+2008-01-31 Mathieu Lonjaret <lejatorn@sourcemage.org>
 	* DETAILS: update to 0.8.0
 
 2007-10-26 Mathieu Lonjaret <lejatorn@sourcemage.org>
