init.d: smgl_functions: use the builtin echo if the output is not a tty #13090

--- a/smgl/init.d/HISTORY
+++ b/smgl/init.d/HISTORY
@@ -1,3 +1,6 @@
+2008-01-31 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* smgl_functions: use the builtin echo if the output is not a tty #13090
+
 2007-11-20 Vlad Glagolev <stealth@sourcemage.org>
 	* init.d/hostname.sh: added execution of `domainname'
 	  (if exists /etc/defaultdomain containing the domain name)
