--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,7 @@
+2008-01-31 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Optionally depend on wine-gecko (z-rejected) for a
+	  pre-downloaded GECKO engine
+
 2008-01-29 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Apply ncurses.utf8.patch
 	* ncurses.utf8.patch: Fix http://bugs.winehq.org/show_bug.cgi?id=11214
