shell-term-fm/hotwire: new spell, an object-oriented hypershell

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-01 Alexander Tsamutali <astsmtl@gmail.com>
+	* shell-term-fm/hotwire: new spell, an object-oriented hypershell
+
 2008-01-31 Eric Sandall <sandalle@sourcemage.org>
 	* devel/mono-addins: Added an extensible framework for mono apps
 	* gnome2-libs/gtksourceview1: Added GTK text function extension
