--- a/kde4/kdewebdev4/HISTORY
+++ b/kde4/kdewebdev4/HISTORY
@@ -1,3 +1,6 @@
+2008-01-31  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.60
+
 2008-01-11  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.0
 
