--- a/kde4/kdepim4/HISTORY
+++ b/kde4/kdepim4/HISTORY
@@ -1,3 +1,7 @@
+2008-01-31  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.60
+	  KEYWORDS=kde4
+
 2007-12-11  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.97.0
 
