--- a/kde4/kdelibs4/HISTORY
+++ b/kde4/kdelibs4/HISTORY
@@ -1,3 +1,8 @@
+2008-01-31  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.60
+	  KEYWORDS=kde4
+	* CONFLICTS: added
+
 2008-01-11  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.0
 	* PRE_BUILD, qt44.patch: deleted obsolete files
