--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 2008-02-01 Alexander Tsamutali <astsmtl@gmail.com>
 	* shell-term-fm/hotwire: new spell, an object-oriented hypershell
 
+2008-01-31 Lubomir Blaha <tritol@trilogic.cz>
+	* utils/logitech_applet: new spell, tool for setting the special features of Logitech mice
+
 2008-01-31 Eric Sandall <sandalle@sourcemage.org>
 	* devel/mono-addins: Added an extensible framework for mono apps
 	* gnome2-libs/gtksourceview1: Added GTK text function extension
