--- a/audio-players/dermixd/HISTORY
+++ b/audio-players/dermixd/HISTORY
@@ -1,3 +1,6 @@
+2008-02-01 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated to 1.5.0
+
 2008-01-28 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated to 1.4.0
 	* CONFIGURE, BUILD: added option for linux thread priorities, fixed some typing
