--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,7 @@
+2008-01-31 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: bump to version 1.2.0
+	* PRE_BUILD, mpg123-1.1.0_configure.patch: removed, not needed anymore
+
 2008-01-16 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: bump to version 1.1.0
 	* BUILD, CONFIGURE, DEPENDS, PRE_BUILD, mpg123-1.1.0_configure.patch:
