--- a/audio-drivers/alsa-firmware/HISTORY
+++ b/audio-drivers/alsa-firmware/HISTORY
@@ -1,3 +1,6 @@
+2008-02-01 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated to 1.0.16rc1
+
 2007-10-17 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 1.0.15
 
