--- a/devel/ghc/HISTORY
+++ b/devel/ghc/HISTORY
@@ -1,3 +1,6 @@
+2008-02-01 Alexander Tsamutali <astsmtl@gmail.com>
+	* DETAILS: Updated to 6.8.2
+
 2007-12-02 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS, BUILD: updated spell to 6.8.1, cleaned up
 	* UP_TRIGGERS: added, up_trigger every library on every cast
