--- a/haskell/haskell-x11/HISTORY
+++ b/haskell/haskell-x11/HISTORY
@@ -1,3 +1,6 @@
+2008-02-01 Alexander Tsamutali <astsmtl@gmail.com>
+	* DETAILS: updated spell to 1.4.1
+
 2007-12-10 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: updated spell to 1.4.0
 
