--- a/windowmanagers/xmonad/HISTORY
+++ b/windowmanagers/xmonad/HISTORY
@@ -1,3 +1,6 @@
+2008-02-01 Alexander Tsamutali <astsmtl@gmail.com>
+	* DETAILS: updated spell to 0.6
+
 2007-12-10 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: updated spell to 0.5
 	* CONFIGURE, PRE_BUILD, ghc-6.8.patch: removed
