--- a/ftp/transmission/HISTORY
+++ b/ftp/transmission/HISTORY
@@ -1,3 +1,6 @@
+2008-02-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.04
+
 2008-01-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.03
 
