--- a/disk/lvm/HISTORY
+++ b/disk/lvm/HISTORY
@@ -1,3 +1,6 @@
+2008-02-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.02.33
+
 2008-01-29 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.02.32, fixed WEB_SITE
 	* DEPENDS: removed the comments, device-mapper is non-optional
