--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2008-02-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.5.5
+
 2007-12-21 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* PRE_BUILD: fixed --disable-tcl for `optionality' fith offpatch
