--- a/utils/syslog-ng/HISTORY
+++ b/utils/syslog-ng/HISTORY
@@ -1,3 +1,6 @@
+2008-02-01 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.8
+
 2008-01-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.0.7
 
