--- a/kde4/kdelibs4/HISTORY
+++ b/kde4/kdelibs4/HISTORY
@@ -1,3 +1,8 @@
+2008-02-01  Treeve Jelbert <treeve@sourcemage.org>
+	* CONFLICTS: conflict with kdebase4-runtime,
+	  as FindXine.cmake was previously provided by kdebase4-runtime,
+	  whereas it now comes from kdelibs4
+
 2008-01-31  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.60
 	  KEYWORDS=kde4
