--- a/net/iputils-ping/HISTORY
+++ b/net/iputils-ping/HISTORY
@@ -1,3 +1,8 @@
+2008-02-01 Remko van der Vossen <wich@sourcemage.org>
+	* DETAILS: 20071127-1
+	* PRE_BUILD,iputils-glibc-patch.patch: remove glibc patch
+	* BUILD: also build man pages
+
 2007-05-27 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: PATCHLEVEL++
 	  INSTALL: Fixed install permissions.
