--- a/python-pypi/lxml/HISTORY
+++ b/python-pypi/lxml/HISTORY
@@ -1,2 +1,5 @@
+2008-02-01 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.0, hash => gpg
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS: spell created
