--- a/kde4/kdemultimedia4/HISTORY
+++ b/kde4/kdemultimedia4/HISTORY
@@ -1,3 +1,6 @@
+2008-02-01  Treeve Jelbert <treeve@sourcemage.org>
+	* CONFLICTS: added, dragonplayer is no part of kdemultimedia4
+
 2008-01-31  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.60
 	  KEYWORDS=kde4
