--- a/utils/bluez-hcidump/HISTORY
+++ b/utils/bluez-hcidump/HISTORY
@@ -1,3 +1,6 @@
+2008-02-01 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 1.41
+
 2007-10-24 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 1.40
 
