--- a/devel/geany/HISTORY
+++ b/devel/geany/HISTORY
@@ -1,3 +1,6 @@
+2008-02-02 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: tar.gz of svn tarball
+
 2008-01-26 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD, DETAILS, DEPENDS, PREPARE: added `night' version
 	  from svn tarball, fixed short/long desc
