--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-01 David Kowis <dkowis@shlrm.org>
+	* net/ifupdown: new spell, Much better networking config
+
 2008-02-01 Alexander Tsamutali <astsmtl@gmail.com>
 	* shell-term-fm/hotwire: new spell, an object-oriented hypershell
 
