--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2008-02-02 Pol Vinogradov <vin.public@gmail.com>
+	* info/patches/realtime_patches/patch-2.6.24-rt1: added
+	* latests.defaults: set LATEST_realtime_patches=patch-2.6.24-rt1
+
 2008-01-25 Eric Sandall <sandalle@sourcemage.org>
 	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.22.patch: Supports 2.6.24
 
