--- a/news/liferea/HISTORY
+++ b/news/liferea/HISTORY
@@ -1,3 +1,6 @@
+2008-02-02 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 1.4.12
+
 2008-01-17 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.4.11
 
