--- a/devel/libtool/HISTORY
+++ b/devel/libtool/HISTORY
@@ -1,3 +1,6 @@
+2008-02-02 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.5.26, signed by CE6532CF, gnu-verified.gpg -> gnu.gpg
+
 2007-06-26 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.5.24
 
