--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
+	* ruby-raa/FUNCTIONS: minor fixups for rake
+
 2008-02-01 David Kowis <dkowis@shlrm.org>
 	* net/ifupdown: new spell, Much better networking config
 
