--- a/graphics/gscan2pdf/HISTORY
+++ b/graphics/gscan2pdf/HISTORY
@@ -1,3 +1,7 @@
+2008-02-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.21
+	* DEPENDS: add optional tesseract
+
 2008-01-20 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 0.9.20
 
