--- a/kernels/ndiswrapper/HISTORY
+++ b/kernels/ndiswrapper/HISTORY
@@ -1,3 +1,6 @@
+2008-02-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: upgrade to 1.52
+
 2008-01-03 Arjan Bouter <abouter@sourcemage.org>
 	* FINAL: added, to remove the leftover source dir
 
