ide-smart: Use make -B, install manpages to usr/share/man. Fixes bug#14266

--- a/disk/ide-smart/HISTORY
+++ b/disk/ide-smart/HISTORY
@@ -1,3 +1,9 @@
+2008-02-03 Martin Spitzbarth <m.spitzbarth@gmx.de>
+	* BUILD: moved a sed command to PRE_BUILD,
+	  force compilation by using make -B (Bug #14266)
+	* PRE_BUILD: created, moved a sed command here from BUILD,
+	  install manpages to usr/share/man instead of usr/man
+
 2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
 	* DETAILS: (automated) Add KEYWORDS
 
