--- a/python-pypi/sonata/HISTORY
+++ b/python-pypi/sonata/HISTORY
@@ -1,3 +1,6 @@
+2008-02-03 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.4.1, fixed long desc
+
 2008-01-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4
 	* PRE_BUILD: removed, useless, upstream fixed it
