--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-03  Treeve Jelbert <treeve@sourcemage.org>
+	* devel/falcon: new spell, general purpose untyped scripting language
+
 2008-02-02 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* ruby-raa/FUNCTIONS: minor fixups for rake
 
