--- a/telephony/libtelepathy/HISTORY
+++ b/telephony/libtelepathy/HISTORY
@@ -1,3 +1,6 @@
+2008-02-03 Robin Cook <rcook@wyrms.net>
+	* DEPENDS: added telepathy-glib
+
 2008-01-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.3.1
 
