wine: remove the memleak hack with -fno-inline-functions

--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,8 @@
+2008-02-03 Thomas Orgis <sobukus@sourcemage.org>
+	* BUILD: Remove the -fno-inline-functions which was added becuase of vartest.c
+	  memory hogging; seems to be more or less fixed in wine and/or gcc (though
+	  you shouldn't try to build wine on a 64MB RAM box)
+
 2008-01-31 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Optionally depend on wine-gecko (z-rejected) for a
 	  pre-downloaded GECKO engine
