--- a/audio-soft/asunder/HISTORY
+++ b/audio-soft/asunder/HISTORY
@@ -1,3 +1,6 @@
+2008-02-04 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.0.2
+
 2007-12-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: Changed SOURCE_URL[0] extension,
 	  updated spell to 1.0, hash => gpg
