--- a/utils/coreutils/HISTORY
+++ b/utils/coreutils/HISTORY
@@ -1,3 +1,7 @@
+2008-02-03 Ladislav Hagara <hgr@vabo.cz>
+	* DEPENDS: removed linux-pam [Bug 14270]
+	* TRIGGERS: removed
+
 2008-01-30 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DEPENDS: no longer needs util-linux for kill
 
