--- a/mail/mailutils/HISTORY
+++ b/mail/mailutils/HISTORY
@@ -1,3 +1,6 @@
+2008-02-04 Alexander Tsamutali <astsmtl@gmail.com>
+	* DETAILS: updated spell to 1.2
+
 2007-05-11 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* CONFIGURE, BUILD, DEPENDS: made linux-pam a normal optional_depends
 	* CONFIGURE, BUILD: convert all queries to config_query_option, use
