audio-plugins/xmms-sid: new spell, plugin for XMMS for playing SID-tunes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-04 Lubomir Blaha <tritol@trilogic.cz>
+	* audio-plugins/xmms-sid: new spell, plugin for XMMS for playing SID-tunes
+
 2008-02-03 Ladislav Hagara <hgr@vabo.cz>
 	* utils/mktemp: deprecated in favour of coreutils [Bug 14271]
 
