audio-plugins/xmms-rawcdr: new spell, XMMS plugin that can play ripped CD

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-02-04 Lubomir Blaha <tritol@trilogic.cz>
+	* audio-plugins/xmms-rawcdr: new spell, XMMS plugin that can play ripped CD
 	* audio-plugins/xmms-sid: new spell, plugin for XMMS for playing SID-tunes
 
 2008-02-03 Ladislav Hagara <hgr@vabo.cz>
