audio-plugins/xmms-cueinfo: new spell, plugin for XMMS that adds support for reading cue files

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-02-04 Lubomir Blaha <tritol@trilogic.cz>
+	* audio-plugins/xmms-cueinfo: new spell, plugin for XMMS that adds support for reading cue files
 	* audio-plugins/xmms-fmradio: new spell, radio tuner card for XMMS
 	* audio-plugins/xmms-rawcdr: new spell, XMMS plugin that can play ripped CD
 	* audio-plugins/xmms-sid: new spell, plugin for XMMS for playing SID-tunes
