audio-plugins/xmms-a52dec: new spell, an A52/AC3 decoder plugin for XMMS based on liba52

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-02-04 Lubomir Blaha <tritol@trilogic.cz>
+	* audio-plugins/xmms-a52dec: new spell, an A52/AC3 decoder plugin for XMMS based on liba52
 	* audio-plugins/xmms-cueinfo: new spell, plugin for XMMS that adds support for reading cue files
 	* audio-plugins/xmms-fmradio: new spell, radio tuner card for XMMS
 	* audio-plugins/xmms-rawcdr: new spell, XMMS plugin that can play ripped CD
