--- a/audio-players/dermixd/HISTORY
+++ b/audio-players/dermixd/HISTORY
@@ -1,3 +1,6 @@
+2008-02-05 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: updated to 1.5.1 (important bugfix for MPEG input)
+
 2008-02-01 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: updated to 1.5.0
 
