man-pages: 2.77 and backup url

--- a/doc/man-pages/HISTORY
+++ b/doc/man-pages/HISTORY
@@ -1,3 +1,8 @@
+2008-02-05 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
+	* DETAILS: updated spell to 2.77
+	  added archive mirrors
+	  added SOURCE2_IGNORE
+
 2008-02-01 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.76
 
