geany: => 0.13, fixed desc, hash => gpg, removed night version (cool features are already in 0.13 ;)

--- a/devel/geany/HISTORY
+++ b/devel/geany/HISTORY
@@ -1,3 +1,7 @@
+2008-02-05 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.13, hash => gpg
+	* BUILD, DEPENDS, PREPARE: `night version' isn't needed anymore
+
 2008-02-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: tar.gz of svn tarball
 
