--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-05 Vlad Glagolev <stealth@sourcemage.org>
+	* devel/geanylua: new spell, Lua scripting plugin for the Geany IDE
+
 2008-02-04 Lubomir Blaha <tritol@trilogic.cz>
 	* audio-plugins/xmms-a52dec: new spell, an A52/AC3 decoder plugin for XMMS based on liba52
 	* audio-plugins/xmms-cueinfo: new spell, plugin for XMMS that adds support for reading cue files
