py-libmpdclient: new spell, client library for MPD, written in Python, based on work of Jose Iria <jose.iria@gmail.com>, bug #14277

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2008-02-05 Vlad Glagolev <stealth@sourcemage.org>
 	* devel/geanylua: new spell, Lua scripting plugin for the Geany IDE
+	* python-pypi/py-libmpdclient: client library for MPD, written in Python
 
 2008-02-04 Lubomir Blaha <tritol@trilogic.cz>
 	* audio-plugins/xmms-a52dec: new spell, an A52/AC3 decoder plugin for XMMS based on liba52
