--- a/libs/bluez-libs/HISTORY
+++ b/libs/bluez-libs/HISTORY
@@ -1,3 +1,6 @@
+2008-02-06 Julien "_kaze_" ROZO <julien@rozo.org>
+	* DETAILS: updated version to 3.25
+
 2008-01-06 Julien "_kaze_" ROZO <julien@rozo.org>
 	* DETAILS: updated version to 3.24
 
