gcc 4.2.3 and synced patch

--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -1,3 +1,9 @@
+2008-02-05 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 4.2.3
+	* PRE_BUILD: gcc-4.1.1-ffast-math.patch -> gcc-4.2.3-ffast-math.patch
+	* gcc-4.1.1-ffast-math.patch: Synced to 4.2.3
+	  gcc-4.1.1-ffast-math.patch -> gcc-4.2.3-ffast-math.patch
+
 2007-10-20 David Brown <dmlb2000@gmail.com>
 	* INSTALL: make sure if they are using lib64 to compile in the linker
 	  as if it was in /lib64
