--- a/python-pypi/sonata/HISTORY
+++ b/python-pypi/sonata/HISTORY
@@ -1,3 +1,6 @@
+2008-02-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: replaced soappy with zsi (new SOAP implementation)
+
 2008-02-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.4.1, fixed long desc
 
