mirage: new spell, fast and simple GTK+ image viewer, based on work of Jose Iria <jose.iria@gmail.com>, bug #14279

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2008-02-06 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/zsi: python lib that provides an implementation of SOAP
 	* python-pypi/py-libmpdclient: client library for MPD, written in Python
+	* python-pypi/mirage: new spell, fast and simple GTK+ image viewer
 
 2008-02-05 Vlad Glagolev <stealth@sourcemage.org>
 	* devel/geanylua: new spell, Lua scripting plugin for the Geany IDE
