--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,6 @@
+2008-02-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.13.1
+
 2007-07-12 Pol Vinogradov <vin.public@gmail.com>
 	* INSTALL: made config install to /etc/sysconfig/ for init script,
 	  removed tabs
