midori: fixed the check against new WebKitGtk version

--- a/http/midori/HISTORY
+++ b/http/midori/HISTORY
@@ -1,3 +1,6 @@
+2008-02-06 Vlad Glagolev <stealth@sourcemage.org>
+	* BUILD: fixed the check against new WebKitGtk version
+
 2008-01-24 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.0.17
 
