--- a/audio-drivers/alsa-lib/HISTORY
+++ b/audio-drivers/alsa-lib/HISTORY
@@ -1,3 +1,7 @@
+2008-02-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.0.16
+	  fixed long description wrap
+
 2008-01-31 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 1.0.16rc2
 
