--- a/audio-drivers/alsa-utils/HISTORY
+++ b/audio-drivers/alsa-utils/HISTORY
@@ -1,3 +1,7 @@
+2008-02-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.0.16
+	* FINAL: cleaned up spaces
+
 2008-01-31 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 1.0.16rc1
 
