http/icecat: removed iceweasel's query defaults, made building more default

--- a/http/icecat/HISTORY
+++ b/http/icecat/HISTORY
@@ -1,3 +1,7 @@
+2008-02-06 Pol Vinogradov <vin.public@gmail.com>
+	* CONFIGURE: removed iceweasel's defaults
+	* BUILD: made it more default_build-like
+
 2007-12-26 Juuso Alasuutari <iuso@sourcemage.org>
 	* CONFIGURE: Import query defaults from deprecated iceweasel.
 
