http/icecat: removed CONFLICTS

--- a/http/icecat/HISTORY
+++ b/http/icecat/HISTORY
@@ -1,5 +1,6 @@
 2008-02-06 Pol Vinogradov <vin.public@gmail.com>
 	* CONFIGURE: removed iceweasel's defaults
+	* CONFLICTS: removed
 	* BUILD: made it more default_build-like
 
 2007-12-26 Juuso Alasuutari <iuso@sourcemage.org>
