--- a/kde4-apps/kgraphviewer4/HISTORY
+++ b/kde4-apps/kgraphviewer4/HISTORY
@@ -1,3 +1,6 @@
+2008-02-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0
+
 2008-01-15 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.0
 	  use kde url
