wine: Use suggest_depends instead of optional_depends for wine-gecko per Jaka

--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2008-02-06 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Use suggest_depends for wine-gecko per Jaka
+
 2008-02-03 Thomas Orgis <sobukus@sourcemage.org>
 	* BUILD: Remove the -fno-inline-functions which was added becuase of vartest.c
 	  memory hogging; seems to be more or less fixed in wine and/or gcc (though
