--- a/mail/mailutils/HISTORY
+++ b/mail/mailutils/HISTORY
@@ -1,3 +1,6 @@
+2008-02-06 Alexander Tsamutali <astsmtl@gmail.com>
+	* CONFIGURE: added option to install MH utilities
+
 2008-02-04 Alexander Tsamutali <astsmtl@gmail.com>
 	* DETAILS: updated spell to 1.2
 
