--- a/gnu/gcc/HISTORY
+++ b/gnu/gcc/HISTORY
@@ -24,11 +24,11 @@
 
 2007-02-14 Treeve Jelbert <treeve01@oi.be>
 	* DETAILS: version 4.1.2
-         convert to upstream signatures
+	  convert to upstream signatures
 
 2007-01-22 Thomas Orgis <sobukus@sourcemage.org>
-        * DEPENDS: ensure that compilers get cast after archspecs so that 
-          they all use the same fresh setup
+	* DEPENDS: ensure that compilers get cast after archspecs so that
+	  they all use the same fresh setup
 
 2007-01-16 Eric Sandall <sandalle@sourcemage.org>
 	* INSTALL: cd to $SOURCE_DIRECTORY.bld at beginning of INSTALL
@@ -67,7 +67,7 @@
 
 2006-03-01 Treeve Jelbert <treeve01@oi.be>
 	* DETAILS: upgrade to 4.1.0
-	* WIP: added, as install fails - 
+	* WIP: added, as install fails -
 	  can't find a usable gcc as it tries to recompile libcpp
 
 2006-03-10 David Brown <dmlb2000@gmail.com>
@@ -84,7 +84,7 @@
 	* DETAILS: PATCHLEVEL++
 
 2006-02-12 George Sherwood <george@beernabeer.com>
-	* volatiles, REPAIR^none^volatiles: Added to prevent cleanse 
+	* volatiles, REPAIR^none^volatiles: Added to prevent cleanse
 	  failing on chainges to specs file.
 
 2006-02-08 Eric Sandall <sandalle@sourcemage.org>
@@ -166,7 +166,7 @@
 2004-04-20 Treeve Jelbert <treeve01@oi.be>
 	* DETAILS: version 3.4.0
 	  BUILD_API=2 ( needs latest build-split sorcery)
-	  this spell now only build the compilers. All libraries are separate spells.
+	  this spell now only build the compilers. All libraries are separate spells
 	* BUILD: remove ( ) > $FIFO
 	  only does make
 	* INSTALL: add
