--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-06 Julien "_kaze_" ROZO <julien@rozo.org>
+	* net/webmonx: new spell, a monitor for websites updates and changes
+
 2008-02-06 Vlad Glagolev <stealth@sourcemage.org>
 	* python-pypi/zsi: python lib that provides an implementation of SOAP
 	* python-pypi/py-libmpdclient: client library for MPD, written in Python
