removed mktemp (deprecated), is a part of coreutils now (which included in basesystem)

--- a/kernels/module-init-tools/HISTORY
+++ b/kernels/module-init-tools/HISTORY
@@ -1,3 +1,7 @@
+2008-02-06 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: removed mktemp (deprecated), is a part
+	  of coreutils now (which included in basesystem)
+
 2007-11-17 David Brown <dmlb2000@gmail.com>
 	* init.d/modutils: added some options that I find useful so others may
 	* init.d/modutils.conf: added for the options I find useful.. default
@@ -272,4 +276,3 @@
 
 2003-04-10 Eric Schabell <eschabell@sourcemage.org>
 	* Created spell.
-
