--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2008-02-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.5.6
+
 2008-02-01 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.5.5
 
