--- a/http/webkitgtk/HISTORY
+++ b/http/webkitgtk/HISTORY
@@ -1,3 +1,6 @@
+2008-02-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to r30048
+
 2008-02-06 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to r30028
 
