winetricks: Added a script to download and install WINE runtime libraries

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2008-02-06 Eric Sandall <sandalle@sourcemage.org>
+	* utils/winetricks: Added Script to download and install WINE runtime
+	  libraries
+
 2008-02-06 Julien "_kaze_" ROZO <julien@rozo.org>
 	* net/webmonx: new spell, a monitor for websites updates and changes
 
