xfsprogs: => 2.9.6 (cherry picked from commit bc60be3335eb26cfd2d8acb7a1229ed4c9b93aac)

--- a/disk/xfsprogs/HISTORY
+++ b/disk/xfsprogs/HISTORY
@@ -1,3 +1,6 @@
+2008-02-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.9.6
+
 2008-01-22 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.9.5
 
