--- a/chat-irc/bitlbee/HISTORY
+++ b/chat-irc/bitlbee/HISTORY
@@ -1,3 +1,6 @@
+2008-02-07 Ethan Grammatikidis <eekee57@fastmail.fm>
+	* CONFIGURE, BUILD, INSTALL: added option to compile bitlbeed
+
 2007-12-20 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated devel to version 1.1.1dev
 
