--- a/e/e_module-news/HISTORY
+++ b/e/e_module-news/HISTORY
@@ -1,3 +1,6 @@
+2008-02-07 Ethan Grammatikidis <eekee57@fastmail.fm>
+	* DEPENDS: needs xdg-utils
+
 2008-01-15 Eric Sandall <sandalle@sourcemage.org>
 	* CONFLICTS: Removed, re-write to metapackage has been in five stable
 	  releases
