--- a/gnome2-libs/glib2/HISTORY
+++ b/gnome2-libs/glib2/HISTORY
@@ -1,3 +1,6 @@
+2008-02-07 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.14.6
+
 2008-01-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.14.5, cleaned up
 
