audio-plugins/xmms-vtx: new spell, XMMS plugin for playing VTX files

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-07 Lubomir Blaha <tritol@trilogic.cz>
+	* audio-plugins/xmms-vtx: new spell, XMMS plugin for playing VTX files
+
 2008-02-06 Pol Vinogradov <vin.public@gmail.com>
 	* http/iceweasel: removed deprecated spell
 
