--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2008-02-07 Lubomir Blaha <tritol@trilogic.cz>
+	* audio-players/playvtx: new spell, VTX file format player based on AY/YM emulation library
 	* audio-plugins/xmms-vtx: new spell, XMMS plugin for playing VTX files
 
 2008-02-06 Pol Vinogradov <vin.public@gmail.com>
