--- a/python-pypi/elixir/HISTORY
+++ b/python-pypi/elixir/HISTORY
@@ -1,3 +1,6 @@
+2008-02-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.5.1
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS, DETAILS: cleaned up
 
