--- a/kde4/kdelibs4/HISTORY
+++ b/kde4/kdelibs4/HISTORY
@@ -1,3 +1,7 @@
+2008-02-07  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.61
+	* CONFLICTS: deleted
+
 2008-02-01  Treeve Jelbert <treeve@sourcemage.org>
 	* CONFLICTS: conflict with kdebase4-runtime,
 	  as FindXine.cmake was previously provided by kdebase4-runtime,
