--- a/audio-drivers/alsa-driver/HISTORY
+++ b/audio-drivers/alsa-driver/HISTORY
@@ -1,3 +1,6 @@
+2008-02-08 Pol Vinogradov <vin.public@gmail.com>
+	* DETAILS: updated to 1.0.16
+
 2008-01-31 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 1.0.16rc2
 
