--- a/kde4/kdesdk4/HISTORY
+++ b/kde4/kdesdk4/HISTORY
@@ -1,3 +1,6 @@
+2008-02-07  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.61
+
 2008-01-31  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.0.60
 	  KEYWORDS=kde4
