--- a/kde4/kdenetwork4/HISTORY
+++ b/kde4/kdenetwork4/HISTORY
@@ -1,3 +1,6 @@
+2008-02-07  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.61
+
 2008-02-02  Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: add optional ktorrent4, xmms
 
