--- a/kde4/kdemultimedia4/HISTORY
+++ b/kde4/kdemultimedia4/HISTORY
@@ -1,3 +1,6 @@
+2008-02-07  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.0.61
+
 2008-02-01  Treeve Jelbert <treeve@sourcemage.org>
 	* CONFLICTS: added, dragonplayer is no part of kdemultimedia4
 
