--- a/database/postgresql/HISTORY
+++ b/database/postgresql/HISTORY
@@ -1,3 +1,6 @@
+2008-02-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: Updated to 8.3.0
+
 2008-01-28 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* TRIGGERS: removed is_depends_enabled.function reference
 
