sane-backends$ - minor install change

--- a/graphics-libs/sane-backends/HISTORY
+++ b/graphics-libs/sane-backends/HISTORY
@@ -1,3 +1,8 @@
+2008-02-07 Treeve Jelbert <treeve@sourcemage.org>
+	* INSTALL: install extra include files, 
+	  so that can build other scanner packages
+	  create /etc/sane.d before install
+
 2008-01-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* CONFIGURE: cleaned up
