--- a/printer/splix/HISTORY
+++ b/printer/splix/HISTORY
@@ -1,3 +1,9 @@
+2008-01-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.1.1
+	* DEPENDS: remove cupsdk, jbigkit is optional
+	* BUILD: pass $OPTS to make
+	* INSTALL: added. ditto
+
 2007-12-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.0
 	* DEPENDS: add jbigkit
