--- a/kde4-apps/koffice2/HISTORY
+++ b/kde4-apps/koffice2/HISTORY
@@ -1,3 +1,10 @@
+2007-02-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 771426
+
+2007-02-01 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 768399
+	  unstable snapshot
+
 2007-12-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.9.95.1
 
