--- a/mail/claws-mail/HISTORY
+++ b/mail/claws-mail/HISTORY
@@ -1,3 +1,8 @@
+2008-02-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.3.0
+	* DEPENDS: removed optional_depends clamav
+	  ClamAV plugin is a part of claws-mail-extra-plugins spell now
+
 2007-12-17 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.2.0
 
