--- a/mail/claws-mail-extra-plugins/HISTORY
+++ b/mail/claws-mail-extra-plugins/HISTORY
@@ -1,3 +1,8 @@
+2008-02-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.3.0
+	* CONFIGURE: added new clamav plugin
+	* DEPENDS: added optional_depends clamav
+
 2007-12-17 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.2.0
 
