--- a/http/firefox/HISTORY
+++ b/http/firefox/HISTORY
@@ -1,3 +1,8 @@
+2008-02-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.0.0.12, SECURITY_PATCH=15
+	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#firefox2.0.0.12
+	* firefox-config.patch: updated to 2.0.0.12
+
 2007-12-20 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated devel to version 3.0 beta 2
 
