--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2008-02-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.55
+
 2008-02-06 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Use suggest_depends for wine-gecko per Jaka
 
