--- a/xfce/xfce4-fsguard-plugin/HISTORY
+++ b/xfce/xfce4-fsguard-plugin/HISTORY
@@ -1,3 +1,6 @@
+2008-02-08 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.4.1
+
 2007-12-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.4.0
 
