--- a/libs/nspr/HISTORY
+++ b/libs/nspr/HISTORY
@@ -1,3 +1,7 @@
+2008-02-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.7
+	* CONFIGURE, PRE_BUILD, assert.patch: removed patch, applied upstream
+
 2007-12-01 George Sherwood <george@beernabeer.com>
 	* CONFIGURE: Added to query for optional STATIC_ASSERT
 	* PRE_BUILD: Added to apply STATIC_ASSERT patch
