--- a/http/seamonkey/HISTORY
+++ b/http/seamonkey/HISTORY
@@ -1,3 +1,7 @@
+2008-02-09 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 1.1.8. SECUIRTY_PATCH++
+	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#SeaMonkey
+
 2007-12-01 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.1.7. SECURITY_PATCH++
 	  http://www.mozilla.org/projects/security/known-vulnerabilities.html#SeaMonkey
