--- a/graphics/imagemagick/HISTORY
+++ b/graphics/imagemagick/HISTORY
@@ -1,3 +1,6 @@
+2008-02-09 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 6.3.8-5
+
 2008-01-28 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 6.3.8-2
 
