--- a/utils/beagle/HISTORY
+++ b/utils/beagle/HISTORY
@@ -1,3 +1,6 @@
+2008-02-09 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated to version 0.3.3
+
 2008-01-26 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 0.3.2
 	* DEPENDS: depends ndesk-dbus-glib
