Updated Changelog to include new spell.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-09 Dale E. Edmons <linuxfan@sourcemage.org>
+	* latex/latex2man: Added new spell for alternative man/info page generation.
+
 2008-02-07 Lubomir Blaha <tritol@trilogic.cz>
 	* audio-libs/libayemu: new spell, AY/YM sound chip (from ZX-Spectrum) emulation library
 	* audio-players/playvtx: new spell, VTX file format player based on AY/YM emulation library
