--- a/graphics/xaralx/HISTORY
+++ b/graphics/xaralx/HISTORY
@@ -1,3 +1,6 @@
+2008-02-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7r1785
+
 2007-11-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7r1783
 
