--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,6 +1,16 @@
+2008-02-09 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: removed UPDATED, fixed short desc, WEB_SITE
+	* HISTORY: fixed Pol's typo :P
+	* latest.defaults: updated to 2.6.24.1
+	* info/patches/maintenance_patches/patch-2.6.24.1: added
+	* info/patches/maintenance_patches/patch-2.6.23.15: added
+	* info/patches/maintenance_patches/patch-2.6.22.15: added
+	* info/patches/maintenance_patches/patch-2.6.22.16: added
+	* info/patches/maintenance_patches/patch-2.6.22.17: added
+
 2008-02-02 Pol Vinogradov <vin.public@gmail.com>
 	* info/patches/realtime_patches/patch-2.6.24-rt1: added
-	* latests.defaults: set LATEST_realtime_patches=patch-2.6.24-rt1
+	* latest.defaults: set LATEST_realtime_patches=patch-2.6.24-rt1
 
 2008-01-25 Eric Sandall <sandalle@sourcemage.org>
 	* info/patches/smgl_patches/smgl-logo-0.2-for-2.6.22.patch: Supports 2.6.24
@@ -4015,4 +4025,3 @@
 2002-08-20 Wolfgang Scheicher <worf@sbox.tu-graz.ac.at>
 	* Rewrite - Attempt to merge several kernel spells into one
 	  Now features a menu to select which version to build
-
