--- a/telephony/telepathy-glib/HISTORY
+++ b/telephony/telepathy-glib/HISTORY
@@ -1,3 +1,7 @@
+2008-02-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7.1
+	* DEPENDS: remove libtelepathy
+
 2007-12-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.7.0
 
