--- a/devel/tk/HISTORY
+++ b/devel/tk/HISTORY
@@ -1,3 +1,7 @@
+2008-02-10 George Sherwood <george@beernabeer.com>
+	* DETAILS: Updated stable to 8.5.1
+	* DEPENDS: depends fontconfig
+
 2007-12-23 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated stable to 8.5.0
 	* INSTALL: Updated link for 8.5
