--- a/disk/e2fsprogs/HISTORY
+++ b/disk/e2fsprogs/HISTORY
@@ -1,3 +1,6 @@
+2008-02-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: Updated to 1.40.6
+
 2008-01-28 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.40.5, removed broken mirrors
 	* DEPENDS, INSTALL: cleaned up: removed useless spaces
