liferea: Added fixes for recent changes in webkigtk.

--- a/news/liferea/HISTORY
+++ b/news/liferea/HISTORY
@@ -1,3 +1,8 @@
+2008-02-10 George Sherwood <george@beernabeer.com>
+	* PRE_BUILD: Added patch.
+	* webkitgtk.patch: Added to fix problem with new *.pc file.
+	* webkit.c: Updated with new location for webkit.h
+
 2008-02-02 George Sherwood <george@beernabeer.com>
 	* DETAILS: Updated to version 1.4.12
 
