--- a/kde4-apps/koffice2/HISTORY
+++ b/kde4-apps/koffice2/HISTORY
@@ -1,3 +1,6 @@
+2007-02-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.9.95.3 (stable)
+
 2007-02-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 771426
 
