--- a/printer/splix/HISTORY
+++ b/printer/splix/HISTORY
@@ -1,3 +1,7 @@
+2008-02-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.0.0-rc1
+	* BUILD: remove a sed; no longer relevant
+
 2008-01-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.1
 	* DEPENDS: remove cupsdk, jbigkit is optional
