New wx_ruby spell added.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
+	* ruby-raa/wx_ruby: Added new spell for wxruby extensions library.
+
 2008-02-09 Dale E. Edmons <linuxfan@sourcemage.org>
 	* latex/latex2man: Added new spell for alternative man/info page generation.
 
