--- a/ruby-raa/wx_sugar/HISTORY
+++ b/ruby-raa/wx_sugar/HISTORY
@@ -3,6 +3,7 @@
 	* BUILD: Set to true, as this is an install-only spell.
 	* DEPENDS: Removed indirect dependencies.
 	* DETAILS: Delinted, I hope.
+	* wx_sugar: renamed from wx_ruby.  Stupid fingers!
 
 2008-01-07 linuxfan <demaillists@comcast.net>
 	* BUILD DEPENDS DETAILS INSTALL: copied from wxruby
