New electronic CAD package.  kicad.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
+	* graphics/kicad: Added new spell for kicad electronic cad suite.
+
+2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
 	* ruby-raa/wx_ruby: Added new spell for wxruby extensions library.
 
 2008-02-09 Dale E. Edmons <linuxfan@sourcemage.org>
