--- a/latex/xcolor/HISTORY
+++ b/latex/xcolor/HISTORY
@@ -1,3 +1,6 @@
+2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
+	* POST_REMOVE: changed incorrect TEX_REMOVE to TEX_POST_REMOVE.
+
 2007-07-19 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: delinting
 
