--- a/utils/qemu/HISTORY
+++ b/utils/qemu/HISTORY
@@ -1,3 +1,6 @@
+2008-02-11 Thomas Orgis <sobukus@sourcemage.org>
+	* DEPENDS: No --enable-kqemu! The custom configure script does only know the disable.
+
 2008-01-19 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: updated to 0.9.1
 	* BUILD: fixed configure's options
