--- a/windowmanagers/openbox/HISTORY
+++ b/windowmanagers/openbox/HISTORY
@@ -1,3 +1,6 @@
+2008-02-11 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: updated to 3.4.6.1
+
 2008-01-11 Martin Spitzbarth <m.spitzbarth@gmx.de>
 	* DETAILS: updated spell to 3.4.5
 
