--- a/windowmanagers/wmx/HISTORY
+++ b/windowmanagers/wmx/HISTORY
@@ -1,3 +1,6 @@
+2008-02-11 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: version 6
+
 2008-01-03 Arjan Bouter <abouter@sourcemage.org>
         * PREPARE: only ask autoupdate when using cvs
 
