Corrrected typo: git-mv wx_ruby wx_sugar.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
+	* ruby-raa/wx_sugar: Corrected misspelled name from wx_ruby.
+
+2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
 	* graphics/kicad: Added new spell for kicad electronic cad suite.
 
 2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
