--- a/video/transcode/HISTORY
+++ b/video/transcode/HISTORY
@@ -1,3 +1,6 @@
+2008-02-11 Thomas Orgis <sobukus@sourcemage.org>
+	* PRE_BUILD, DEPENDS: fix configure for fresh&spicy ImageMagick
+
 2008-01-11 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 1.0.5
 
