urlgrabber: Added a Python library for simple file fetching

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2008-02-11 Eric Sandall <sandalle@sourcemage.org>
 	* libs/libvirt: Added C toolkit for virtualization
+	* python-pypi/urlgrabber: Added a Python library for simple file fetching
 
 2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
 	* ruby-raa/wx_sugar: Corrected misspelled name from wx_ruby.
