virtinst: Added a virtual machine installation tool

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2008-02-11 Eric Sandall <sandalle@sourcemage.org>
 	* libs/libvirt: Added C toolkit for virtualization
 	* python-pypi/urlgrabber: Added a Python library for simple file fetching
+	* python-pypi/virtinst: Added a virtual machine installation tool
 
 2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
 	* ruby-raa/wx_sugar: Corrected misspelled name from wx_ruby.
