gtk-vnc: Added a GTK VNC viewer widget

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 	* libs/libvirt: Added C toolkit for virtualization
 	* python-pypi/urlgrabber: Added a Python library for simple file fetching
 	* python-pypi/virtinst: Added a virtual machine installation tool
+	* x11/gtk-vnc: Added a GTK VNC viewer widget
 
 2008-02-11 Dale E. Edmons <linuxfan@sourcemage.org>
 	* ruby-raa/wx_sugar: Corrected misspelled name from wx_ruby.
