sane-backends: => 1.0.19, cleaned up the spaces, removed useless quotes

--- a/graphics-libs/sane-backends/HISTORY
+++ b/graphics-libs/sane-backends/HISTORY
@@ -1,3 +1,8 @@
+2008-02-12 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.0.19
+	* DEPENDS: cleaned up the spaces
+	* BUILD: removed useless quotes
+
 2008-02-07 Treeve Jelbert <treeve@sourcemage.org>
 	* INSTALL: install extra include files, 
 	  so that can build other scanner packages
