thunderbird: Create unique SOURCE_DIRECTORY (fixes Bug #7977)

--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,3 +1,7 @@
+2008-02-11 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS, PRE_BUILD, BUILD, INSTALL: Create unique SOURCE_DIRECTORY
+	  Fixes Bug #7977
+
 2007-11-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.0.9, SECURITY_PATCH=10
 	* mozilla.gpg: updated "Mozilla Software Releases" key
