sane-backends: added missing backends, left out: dell1600n_net, dll, epjitsu, epson2, hp3900, hp5590, hpljm1005, hpsj5s, hs2p, mustek_pp, qcam

--- a/graphics-libs/sane-backends/HISTORY
+++ b/graphics-libs/sane-backends/HISTORY
@@ -2,6 +2,7 @@
 	* DETAILS: updated spell to 1.0.19
 	* DEPENDS: cleaned up the spaces
 	* BUILD: removed useless quotes
+	* CONFIGURE: added missing backends
 
 2008-02-07 Treeve Jelbert <treeve@sourcemage.org>
 	* INSTALL: install extra include files, 
