thunderbird: Updated Enigmail to 0.95.6

--- a/mail/thunderbird/HISTORY
+++ b/mail/thunderbird/HISTORY
@@ -1,5 +1,7 @@
 2008-02-11 Eric Sandall <sandalle@sourcemage.org>
-	* DETAILS, PRE_BUILD, BUILD, INSTALL: Create unique SOURCE_DIRECTORY
+	* DETAILS: Updated Enigmail to 0.95.6
+	  Enigmail SOURCE_URL changed to /download/source from /downloads/src
+	* DETAILS, PRE_BUILD, BUILD: Create unique SOURCE_DIRECTORY
 	  Fixes Bug #7977
 
 2007-11-14 Ladislav Hagara <hgr@vabo.cz>
