firefox: Create unique SOURCE_DIRECTORY (fixes Bug #7977)

--- a/http/firefox/INSTALL
+++ b/http/firefox/INSTALL
@@ -1,3 +1,5 @@
+cd $SOURCE_DIRECTORY/mozilla  &&
+
 FIREFOX_HOME=$INSTALL_ROOT/usr/lib/firefox &&
 
 if  spell_ok  Firebird;  then
@@ -5,14 +7,13 @@ if  spell_ok  Firebird;  then
 fi  &&
 #fix firefox-config file to match installed configuration
 if [ "$FIREFOX_CVS" == "n" ]; then
-patch -p0 < $SCRIPT_DIRECTORY/firefox-config.patch
+  patch -p0 < $SCRIPT_DIRECTORY/firefox-config.patch
 fi &&
 
 # Not recommended by http://www.mozilla.org/build to use
 # make install.  Manually install the files.
 
 mkdir -p $INSTALL_ROOT/usr/lib/firefox  &&
-cd $SOURCE_DIRECTORY   &&
 cp -RLv dist/bin/* $INSTALL_ROOT/usr/lib/firefox/  &&
 mkdir -p $INSTALL_ROOT/usr/include/firefox/ &&
 cp -LfRv dist/include/* $INSTALL_ROOT/usr/include/firefox/ &&
@@ -20,10 +21,10 @@ mkdir -p $INSTALL_ROOT/usr/share/idl/firefox/ &&
 cp -LfRv dist/idl/* $INSTALL_ROOT/usr/share/idl/firefox/ &&
 
 if [ "$FIREFOX_CVS" == "n" ]; then
-#fix install directories in *.pc files.
-sed -i s#usr/local#usr# build/unix/firefox-* &&
-sed -i s#-${VERSION}## build/unix/firefox-* &&
-cp build/unix/firefox*.pc $INSTALL_ROOT/usr/lib/pkgconfig 
+  #fix install directories in *.pc files.
+  sed -i s#usr/local#usr# build/unix/firefox-* &&
+  sed -i s#-${VERSION}## build/unix/firefox-* &&
+  cp build/unix/firefox*.pc $INSTALL_ROOT/usr/lib/pkgconfig 
 fi &&
 
 #
@@ -71,11 +72,11 @@ install  -m  755  -o  root  -g  root  $SCRIPT_DIRECTORY/firefox  \
          $INSTALL_ROOT/usr/bin  &&
 
 if [ "$FIREFOX_CVS" == "n" ]; then
-# make the pkgconfig files reference the nspr from the standalone nspr spell
-sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-nss.pc  &&
-sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-js.pc  &&
-sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-xpcom.pc &&
-sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-plugin.pc
+  # make the pkgconfig files reference the nspr from the standalone nspr spell
+  sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-nss.pc  &&
+  sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-js.pc  &&
+  sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-xpcom.pc &&
+  sedit "s/nspr/mozilla-nspr/" ${INSTALL_ROOT}/usr/lib/pkgconfig/firefox-plugin.pc
 fi  &&
 
 
