--- a/libs/sip/HISTORY
+++ b/libs/sip/HISTORY
@@ -1,3 +1,6 @@
+2008-02-12 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 4.7.4
+
 2007-12-08 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 4.7.3
 
