Documented the location and reason for adding patch.  Suspect this might be better handled as a second SOURCE_URL, but need to do more research.

--- a/utils/fbgetty/HISTORY
+++ b/utils/fbgetty/HISTORY
@@ -1,5 +1,7 @@
 2008-02-12 Dale E. Edmons <linuxfan@sourcemage.org>
 	* PRE_BUILD: Created for patching fbgetty (thanks arachnist).
+	* fbgetty-0.1.698-gcc41.patch: New.  Corrections for compile errors.
+	*  http://nest.homeunix.net/repos/portage/net-dialup/fbgetty/files
 
 2006-10-03 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: [automated] Removed UPDATED.
