apt: added PRE_BUILD to fix building it with recent doxygen

--- a/archive/apt/HISTORY
+++ b/archive/apt/HISTORY
@@ -1,3 +1,7 @@
+2008-02-13 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: patchlevel 1 and wrapped the long description
+	* PRE_BUILD: added
+
 2007-12-01 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.7.9
 	  Removed UPDATED
