mozilla: Updated Enigmail to 0.93.2

--- a/http/mozilla/HISTORY
+++ b/http/mozilla/HISTORY
@@ -1,4 +1,6 @@
 2008-02-11 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated Enigmail to 0.93.2
+	  PATCHLEVEL=1
 	* DETAILS, PRE_BUILD, BUILD: Create unique SOURCE_DIRECTORY
 	  Fixes Bug #7977
 
