And the HISTORY...

--- a/utils/fbgetty/HISTORY
+++ b/utils/fbgetty/HISTORY
@@ -1,3 +1,6 @@
+2008-02-13 Dale E. Edmons <linuxfan@sourcemage.org>
+	* PRE_BUILD: added verify_file 2.
+
 2008-02-12 Dale E. Edmons <linuxfan@sourcemage.org>
 	* DETAILS: Changed to download patch from author's site.
 	* PRE_BUILD: Changed to use SOURCE_CACHE.
