--- a/python-pypi/sqlalchemy/HISTORY
+++ b/python-pypi/sqlalchemy/HISTORY
@@ -1,3 +1,6 @@
+2008-02-15 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.4.3
+
 2008-01-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.4.2p3
 
