--- a/python-pypi/setuptools/HISTORY
+++ b/python-pypi/setuptools/HISTORY
@@ -1,3 +1,7 @@
+2008-02-15 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 0.6c8
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* INSTALL: default_install_python due to the new build system in section
 
