strigi: Typo QT$ -> QT4

--- a/utils/strigi/HISTORY
+++ b/utils/strigi/HISTORY
@@ -1,3 +1,6 @@
+2008-02-15 Eric Sandall <sandalle@sourcemage.org>
+	* SUB_DEPENDS: Typo QT$ -> QT4
+
 2007-10-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.5.7
 	  use SOURCEFORGE_URL
