moinmoin: => python-pypi

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-17 Vlad Glagolev <stealth@sourcemage.org>
+	* collab/moinmoin: => python-pypi
+
 2008-02-14 Thomas Orgis <sobukus@sourcemage.org>
 	* video/xjadeo: added JACK-synced video player
 
