moinmoin: added xapian-core as an opt dep

--- a/python-pypi/moinmoin/HISTORY
+++ b/python-pypi/moinmoin/HISTORY
@@ -1,6 +1,7 @@
 2008-02-17 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD, INSTALL: useless, due to move the spell to this section
 	* DETAILES: updated to 1.6.1, fixed descs, SOURCE_URL
+	* DEPENDS: added xapian-core as an opt dep
 
 2007-11-03 Ethan "eekee" Grammatikidis <eekee57@fastmail.fm>
 	* DETAILS: updated WEB_SITE
