--- a/utils/nut/HISTORY
+++ b/utils/nut/HISTORY
@@ -1,3 +1,8 @@
+2008-02-17 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 2.2.1, cleaned up
+	* BUILD: fixed ups group
+	* INSTALL: useless, `make install-conf' is deprecated
+
 2008-01-07 Elisamuel Resto <ryuji@sourcemage.org>
 	* BUILD: must specify --with-group if --with-user is used in $OPTS
 
