--- a/disk/ntfs-3g/HISTORY
+++ b/disk/ntfs-3g/HISTORY
@@ -1,3 +1,6 @@
+2008-02-17 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2216
+
 2008-01-28 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2129
 	* DEPENDS: fuse is now optional
