icewm: made libxrandr and libxinerama optional

--- a/windowmanagers/icewm/HISTORY
+++ b/windowmanagers/icewm/HISTORY
@@ -1,3 +1,7 @@
+2008-02-16 Arjan Bouter <abouter@sourcemage.org>
+	* DETAILS: patchlevel=2
+	* DEPENDS: made libxinerama and libxrandr optional
+
 2008-01-11 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: stable version 1.2.35
 	* DEPENDS: use optional_depends instead of config_query
