ffmpeg-svn: regenerated the patch for c++ header complience.

--- a/video/ffmpeg-svn/HISTORY
+++ b/video/ffmpeg-svn/HISTORY
@@ -1,3 +1,8 @@
+2008-02-18 Ethan Grammatikidis <eekee57@fastmail.fm>
+	* 300_c++_compliant_headers.diff: regenerated for todays svn.
+	  May I note that I think maintaining a patch against an scm-based
+	  spell is a bad idea?
+
 2007-11-19 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* PREPARE, DETAILS: removed amr-nb-fixed, not supported anymore
 	* BUILD, DETAILS, PREPARE, PRE_BUILD: commented out the whole amr
