avidemux2: updated to 2.4.1

--- a/video/avidemux2/HISTORY
+++ b/video/avidemux2/HISTORY
@@ -1,3 +1,6 @@
+2008-02-18 Arwed v. Merkatz <v.merkatz@gmx.net>
+	* DETAILS: updated to 2.4.1
+
 2008-01-11 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DETAILS: updated to 2.4
 	* PRE_BUILD, gcc-4-2.patch: removed patch
