moinmoin: suggest depends :]

--- a/python-pypi/moinmoin/HISTORY
+++ b/python-pypi/moinmoin/HISTORY
@@ -1,3 +1,6 @@
+2008-02-19 Vlad Glagolev <stealth@sourcemage.org>
+	* DEPENDS: suggest
+
 2008-02-17 Vlad Glagolev <stealth@sourcemage.org>
 	* BUILD, INSTALL: useless, due to move the spell to this section
 	* DETAILES: updated to 1.6.1, fixed descs, SOURCE_URL
