trac: => 0.11b1 + lots of fixes

--- a/python-pypi/trac/HISTORY
+++ b/python-pypi/trac/HISTORY
@@ -1,3 +1,11 @@
+2008-02-19 Vlad Glagolev <stealth@sourcemage.org>
+	* PREPARE: removed, there's no -current svn branch atm
+	* INSTALL: there's no global config now
+	* DEPENDS: new added, old removed
+	* CONFIGURE: added MySQL database support
+	* DETAILS: update to 0.11b1, fixed license, website, desc,
+	  cleaned up
+
 2008-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* INSTALL: default_install
 
