--- a/python-pypi/trac/INSTALL
+++ b/python-pypi/trac/INSTALL
@@ -1,6 +1,3 @@
 default_install &&
 
-# create system-wide Trac configuration
-install_config_file "$SCRIPT_DIRECTORY/trac.ini" "/etc/trac.ini" &&
-mkdir -pv "$INSTALL_ROOT/usr/share/trac/conf" &&
-ln -fnsv "/etc/trac.ini" "$INSTALL_ROOT/usr/share/trac/conf/trac.ini"
+install -m 755 cgi-bin/*cgi $INSTALL_ROOT/usr/bin
