--- a/graphics-libs/libpng/HISTORY
+++ b/graphics-libs/libpng/HISTORY
@@ -1,3 +1,7 @@
+2008-02-19 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.2.25
+	* DEPENDS: cleaned up the spaces
+
 2007-12-20 George Sherwood <george@beernabeer.com>
 	* PRE_BUILD: Update apng patch to 1.2.24
 	* libpng-1.2.23-apng.patch: removed
@@ -138,4 +142,3 @@
 
 2002-04-18 Sergey Lipnevich <sergey@sourcemage.org>
 	* DETAILS: Updated to 1.2.2. Added a SOURCE2, which is a fix of many a makefile.
-
