mpg123: fix puleaudio build

--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,6 @@
+2008-02-19 Thomas Orgis <sobukus@sourcemage.org>
+	* CONFIGURE, DEPENDS: pulseaudio module is called pulse!
+
 2008-01-31 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS: bump to version 1.2.0
 	* PRE_BUILD, mpg123-1.1.0_configure.patch: removed, not needed anymore
