--- a/disk/hdparm/HISTORY
+++ b/disk/hdparm/HISTORY
@@ -1,3 +1,6 @@
+2008-02-19 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 8.2
+
 2007-10-30 Pol Vinogradov <vin.public@gmail.com>
 	* init.d/hdparm.conf: made it work through sysfs interface
 
