ecore: moved libx* deps from e17 to ecore

--- a/e/ecore/HISTORY
+++ b/e/ecore/HISTORY
@@ -1,3 +1,7 @@
+2008-02-19 Arjan Bouter <abouter@sourcemage.org>
+	* DEPENDS: moved libx* deps from e17 to ecore
+	  made libxdamage, libxrender, libxrandr and libxinerama optional
+
 2007-09-17 Ladislav Hagara <hgr@vabo.cz>
 	* CONFIGURE, BUILD: added possibility to build Ecore_Desktop module
 
