mpg123: update to 1.2.1

--- a/audio-players/mpg123/HISTORY
+++ b/audio-players/mpg123/HISTORY
@@ -1,3 +1,6 @@
+2008-02-20 Thomas Orgis <sobukus@sourcemage.org>
+	* DETAILS: Update to 1.2.1 .
+
 2008-02-19 Thomas Orgis <sobukus@sourcemage.org>
 	* CONFIGURE, DEPENDS: pulseaudio module is called pulse!
 
