lineak_kdeplugins: moved from x11-libs to kde-apps added a BUILD script to use default_kde3_build modified dependencies by using KDE_DEPENDS

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2008-02-20 Julien "_kaze_" ROZO <julien@rozo.org>
+	* kde-apps/lineak_kdeplugins: moved from x11-libs
+
 2008-02-20 Pol Vinogradov <vin.public@gmail.com>
 	* disk/sdparm: new spell, utility to access/tune SCSI disk parameters
 
