--- a/kde-apps/lineak_kdeplugins/HISTORY
+++ b/kde-apps/lineak_kdeplugins/HISTORY
@@ -1,3 +1,7 @@
+2008-02-17 Julien "_kaze_" ROZO <julien@rozo.org>
+	* BUILD: added, spell now uses default_kde3_build
+	* DEPENDS: removed depends kdelibs and arts (now in KDE_DEPENDS).
+
 2006-07-03 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: 0.9
 
